--- a/nx.json
+++ b/nx.json
@@ -5,7 +5,7 @@
 		"default": {
 			"runner": "nx/tasks-runners/default",
 			"options": {
-				"cacheableOperations": ["build", "lint", "test", "e2e"]
+				"cacheableOperations": ["build", "check", "lint", "test"]
 			}
 		}
 	}
