--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
 		"moduleDetection": "force",
 		"strict": true,
 		"target": "esnext",
-		"useDefineForClassFields": true,
-		"importsNotUsedAsValues": "error"
+		"verbatimModuleSyntax": true
 	}
 }
