--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -4,7 +4,8 @@
 	"private": "true",
 	"type": "module",
 	"scripts": {
-		"run": "tsx index.ts",
+		"dev": "node --loader tsx -r dotenv/config index.ts dotenv_config_path=./.env.local",
+		"start": "tsx index.ts",
 		"test": "jest",
 		"check": "tsc --noEmit",
 		"lint": "eslint . && prettier --check .",
