--- a/packages/crawler/tsconfig.json
+++ b/packages/crawler/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"moduleResolution": "node"
 	}
 }
