--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - run: npm ci
       - env:
           SUPABASE_URL: https://vrpyodyxhlbljkedyeoy.supabase.co
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
