--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,9 +23,9 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
+		"postcss-preset-env": "^8.4.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"sass": "^1.62.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
