Enforce project boundaries
https://nx.dev/core-features/enforce-project-boundaries

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -36,5 +36,10 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.21.0"
+	},
+	"nx": {
+		"tags": [
+			"scope:web"
+		]
 	}
 }
