--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "inum-city",
-  "version": "0.0.1",
-  "private": true,
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "nx": "16.2.2",
-    "prettier": "2.8.8",
-    "typescript": "^5.0.4"
-  },
-  "workspaces": [
-    "packages/*"
-  ]
+	"name": "inum-city",
+	"version": "0.0.1",
+	"private": true,
+	"devDependencies": {
+		"@nx/devkit": "^16.2.2",
+		"@nx/eslint-plugin": "^16.2.2",
+		"@typescript-eslint/eslint-plugin": "^5.59.5",
+		"@typescript-eslint/parser": "^5.59.5",
+		"eslint": "^8.40.0",
+		"eslint-config-prettier": "^8.8.0",
+		"nx": "16.2.2",
+		"prettier": "2.8.8",
+		"typescript": "^5.0.4"
+	},
+	"workspaces": [
+		"packages/*"
+	]
 }
