--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -25,5 +25,10 @@
 		"@actions/core": "^1.10.0",
 		"@supabase/supabase-js": "^2.21.0",
 		"dotenv": "^16.0.3"
+	},
+	"nx": {
+		"tags": [
+			"scope:crawler"
+		]
 	}
 }
