--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -21,6 +21,6 @@ jobs:
         with:
           version: 1.0.0
 
-      - run: supabase link --project-ref $PROJECT_ID
+      - run: supabase link --project-ref "$SUPABASE_PROJECT_ID"
 
       - run: supabase db push
