--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ jobs:
     permissions:
       contents: 'read'
       actions: 'read'
+    env:
+      PUBLIC_SUPABASE_URL: ${{ vars.SUPABASE_URL }}
+      PUBLIC_SUPABASE_ANON_KEY: ${{ vars.SUPABASE_ANON_KEY }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -21,16 +24,6 @@ jobs:
       - run: npx nx format:check
       - run: npx nx affected -t check --parallel=3
       - run: npx nx affected -t lint --parallel=3
-      - run: |
-          PUBLIC_SUPABASE_URL="$SUPABASE_URL" \
-          PUBLIC_SUPABASE_ANON_KEY="$SUPABASE_ANON_KEY" \
-          echo "'${PUBLIC_SUPABASE_URL}', '${PUBLIC_SUPABASE_ANON_KEY}'"
-      - run: |
-          PUBLIC_SUPABASE_URL="$SUPABASE_URL" \
-          PUBLIC_SUPABASE_ANON_KEY="$SUPABASE_ANON_KEY" \
-          npx nx affected -t build --parallel=3
+      - run: npx nx affected -t build --parallel=3
       - run: npx playwright install --with-deps
-      - run: |
-          PUBLIC_SUPABASE_URL="$SUPABASE_URL" \
-          PUBLIC_SUPABASE_ANON_KEY="$SUPABASE_ANON_KEY" \
-          npx nx affected -t test --parallel=3 --configuration=ci
+      - run: npx nx affected -t test --parallel=3 --configuration=ci
