--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@typescript-eslint/parser": "^5.59.5",
 		"eslint": "^8.40.0",
 		"eslint-config-prettier": "^8.8.0",
+		"modern-normalize": "^2.0.0",
 		"nx": "16.2.2",
 		"prettier": "2.8.8",
 		"typescript": "^5.0.4"
