--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,8 +11,8 @@
 		"test:e2e": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write . && eslint . --fix"
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write . && eslint . --fix"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.34.3",
