--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
 		"eslint-plugin-import": "^2.27.5",
+		"husky": "^8.0.3",
 		"modern-normalize": "^2.0.0",
 		"nx": "16.2.2",
 		"prettier": "2.8.8",
 		"typescript": "^5.0.4"
+	},
+	"scripts": {
+		"prepare": "npx husky install"
 	},
 	"workspaces": [
 		"packages/*"
