Remove `nx` dependencies

--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -16,4 +16,4 @@ jobs:
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
           PUBLIC_API_KEY: ${{ secrets.PUBLIC_API_KEY }}
           SUPABASE_URL: ${{ vars.SUPABASE_URL }}
-        run: npx nx run crawler:start
+        run: npm run start --workspace=crawler
