--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: nrwl/nx-set-shas@v3
       - run: npm ci
 
-      - run: npx nx format:check
-      - run: npx nx affected -t check --parallel=3
-      - run: npx nx affected -t lint --parallel=3
-      - run: npx nx affected -t build --parallel=3
+      - run: npm run check --workspaces
+      - run: npm run lint --workspaces
+      - run: npm run build --workspaces
       - run: npx playwright install --with-deps
-      - run: npx nx affected -t test --parallel=3 --configuration=ci
+      - run: npm run test --workspaces
