--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"esModuleInterop": true,
 		"isolatedModules": true,
-		"module": "esnext",
+		"module": "NodeNext",
 		"moduleResolution": "nodenext",
 		"moduleDetection": "force",
 		"strict": true,
