Run `build` script only when present

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,6 @@ jobs:
 
       - run: npm run check --workspaces
       - run: npm run lint --workspaces
-      - run: npm run build --workspaces
+      - run: npm run build --workspaces --if-present
       - run: npx playwright install --with-deps
       - run: npm run test --workspaces
