--- a/packages/crawler/tsconfig.json
+++ b/packages/crawler/tsconfig.json
@@ -2,6 +2,6 @@
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
 		"resolveJsonModule": true,
-		"moduleResolution": "node"
+		"moduleResolution": "NodeNext"
 	}
 }
