--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -18,12 +18,12 @@
 		"@types/jest": "^29.5.1",
 		"@types/node": "^20.1.1",
 		"babel-jest": "^29.5.0",
-		"jest": "^29.5.0",
-		"tsx": "^3.12.7"
+		"jest": "^29.5.0"
 	},
 	"dependencies": {
 		"@actions/core": "^1.10.0",
 		"@supabase/supabase-js": "^2.21.0",
-		"dotenv": "^16.0.3"
+		"dotenv": "^16.0.3",
+		"tsx": "^3.14.0"
 	}
 }
