--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -7,7 +7,7 @@
 		"dev": "node --loader tsx -r dotenv/config index.ts dotenv_config_path=./.env.local",
 		"start": "tsx index.ts",
 		"test": "jest",
-		"check": "tsc --noEmit",
+		"check": "tsc",
 		"lint": "eslint . && prettier --check .",
 		"format": "eslint . --fix && prettier --write ."
 	},
