--- a/packages/crawler/tsconfig.json
+++ b/packages/crawler/tsconfig.json
@@ -2,6 +2,8 @@
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
 		"resolveJsonModule": true,
-		"moduleResolution": "NodeNext"
+		"module": "ESNext",
+		"moduleResolution": "Bundler",
+		"noEmit": true
 	}
 }
