Add `setup-node` steps

--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -11,6 +11,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
       - run: npm ci
       - env:
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
